<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >



    <EditText
        android:id="@+id/userPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/usrLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/userPwd"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="46dp"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>


    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton1"
        android:layout_marginBottom="60dp"
        android:layout_toLeftOf="@+id/userPwd"
        android:text="@string/txtPwd" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/usrLogin"
            android:layout_alignLeft="@+id/textView3"
            android:text="@string/txtLogin" />
        
        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="60dp"
            android:layout_toRightOf="@+id/textView1"
            android:contentDescription="@string/txtConect"
            android:onClick="btnConnectClicked"
            android:src="@drawable/login_48" />
        
        <ImageButton
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_marginLeft="34dp"
            android:layout_toRightOf="@+id/imageButton1"
            android:contentDescription="@string/registerInfo"
            android:onClick="btnRegisterClicked"
            android:src="@drawable/edit_6_48" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/usrLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:src="@drawable/logo_hl"
            android:contentDescription="@string/app_name" />



</RelativeLayout>
